--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,11 +2,76 @@
 set -g mouse on
 
 # Skrót na stworzenie nowego pionowego pane (split) - Alt + d
-bind -n M-d split-window -h 
+bind -n M-d split-window -h
 
 # Skrót na stworzenie nowego poziomego pane (split) - Alt + Shift + d
-bind -n M-D split-window -v 
+bind -n M-D split-window -v
 
 bind -n M-i set-window-option synchronize-panes
 
-bind -n M-Enter resize-pane -Z
+bind -n C-Space resize-pane -Z
+
+# Przejdź do panelu po lewej (Ctrl + Left)
+bind-key -n C-Left select-pane -L
+
+# Przejdź do panelu po prawej (Ctrl + Right)
+bind-key -n C-Right select-pane -R
+
+# Przejdź do panelu powyżej (Ctrl + Up)
+bind-key -n C-Up select-pane -U
+
+# Przejdź do panelu poniżej (Ctrl + Down)
+bind-key -n C-Down select-pane -D
+
+# Przejdź do kolejnego okna (Ctrl + >)
+bind-key -n C-> next-window
+
+# Przejdź do poprzedniego okna (Ctrl + <)
+bind-key -n C-< previous-window
+
+set-option -g history-limit 10000
+
+set -g default-terminal "screen-256color"
+
+#set -g status-style bg=colour238
+#
+#set -g pane-active-border-style bg=default,fg=colour246
+#set -g pane-border-style fg=colour238
+
+set -g renumber-windows on
+set -g status-interval 1
+
+
+set -g pane-active-border-style "bg=default,#{?window_zoomed_flag,fg=colour61,#{?pane_synchronized,fg=colour37,fg=colour166}}"
+set -g pane-border-format " #[bold,fg=colour231,#{?window_zoomed_flag,bg=colour61,#{?pane_synchronized,bg=colour37,#{?pane_active,bg=colour166,bg=colour245}}}] #{?window_zoomed_flag,Z,#P} \
+#[#{?window_zoomed_flag,fg=colour61,#{?pane_synchronized,fg=colour37,#{?pane_active,fg=colour166,fg=colour245}}},bg=default,nobold] \
+#[bold]#{s|Development/Projects|D/P|;s|/Users/bfrank|~|:pane_current_path}#[nobold] \
+#[align=right] #{pane_current_command} "
+#set -g pane-border-lines "heavy"
+set -g status 2
+set -g status-format[1] "#[align=right]#(tmux-status)"
+set -g status-right "#[fg=colour61,bold]#{session_name} #[fg=default]@ #[fg=colour125]#h#[nobold]"
+set -g window-status-current-format "#[fg=colour231,bg=colour33,bold] #I: #W #[nobold]"
+set -g window-status-format "#[fg=colour33,bg=colour254,bold] #I: #W #[nobold]"
+
+set -g aggressive-resize off
+set -g mode-style "bg=colour24,fg=colour231"
+set -g pane-border-style "bg=default,#{?pane_synchronized,fg=colour37,fg=colour245}"
+set -g pane-border-status top
+set -g status-left ""
+set -g status-position top
+set -g status-style "bg=default"
+set -g window-status-activity-style "fg=colour33,bg=default"
+set -g window-status-current-style "fg=colour231,bg=default"
+
+
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @yank_selection_mouse 'clipboard'
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
